--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,9 @@ html {
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
   box-sizing: border-box;
+
+  font-family: 'Noto Sans', sans-serif;
+  line-height: 1.3;
 }
 
 *, *::before, *::after {
