--- a/css/main.css
+++ b/css/main.css
@@ -43,4 +43,29 @@ body {
 section h2 {
   font-size: 1.5rem;
   font-weight: bold;
+  margin-bottom: 0;
+}
+
+section p {
+  margin-top: 5px;
+}
+
+@media only screen and (min-width: 25em) {
+
+  html {
+    font-size: 100%;
+    line-height: 1.3;
+  }
+
+  h2, p {
+    margin: 0 0 1.3rem;
+    display: block;
+    clear: both;
+  }
+
+  .img-flex {
+    width: 85%;
+    text-align: center;
+  }
+
 }
